Ensure code doesn't overflow container

--- a/css/code.css
+++ b/css/code.css
@@ -1,3 +1,10 @@
+.highlight{
+    overflow: auto;
+}
+
+
+
+
 .highlight pre { background-color: #272822; }
 .highlight .hll { background-color: #272822; }
 .highlight .c { color: #75715e } /* Comment */
